--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,8 +19,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
+
                 <a class="nav-item nav-link" id="login" href="/login">Login</a>
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+
+                <a class="nav-item nav-link" id="logout" href="/logout">Login</a>
+                <a class="nav-item nav-link" id="home" href="/home">Sign Up</a>
+
             </div>
         </div>
     </nav>
