added a note via form

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,25 @@
 {% extends "base.html" %} {% block title %} Changed {% endblock %}
 
 
-{% block content %} <h1>This is the home page</h1> {% endblock %}
+{% block content %}
+
+<h1 allign="center">Notes</h1>
+
+<ul class="list-group list-group-flush" id="my_notes">
+
+    {% for note in user.notes %}
+    <li class="list-group-item">{{note.data}}</li>
+    {% endfor %}
+
+</ul>
+
+<form method="POST">
+    <div class="form-group">
+        <label for="note">New note</label>
+        <input type="note" class="form-control" id="note" name="note" placeholder="Note" />
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary">Add</button>
+</form>
+
+{% endblock %}
