--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,7 +2,7 @@
 <form method="POST">
     <h3 align="center">Login</h3>
     <div class="form-group">
-        <label for="email">Email Address {{ text }} </label>
+        <label for="email">Email Address</label>
         <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" />
     </div>
     <div class="form-group">
