--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -8,7 +8,11 @@
 <ul class="list-group list-group-flush" id="my_notes">
 
     {% for note in user.notes %}
-    <li class="list-group-item">{{note.data}}</li>
+    <li class="list-group-item">{{note.data}}
+        <button class="close" type="button" onClick="deleteNote({{ note.id }})">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </li>
     {% endfor %}
 
 </ul>
